--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
 				<audio id="audio_tag" ng-src="{{current_songFile}}">
 				</audio>
 			</div>
-			<div class="progress" style="width:400px;">
-			  <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 0%;">
-			  	{{shoCurrentTime}}
-			  </div>
+			<div class="progress" style="width:400px;cursor: pointer;"  ng-click="setCurrentTime($event)">			  	
+				<div style="z-index:1000px;color:#FF0404">{{shoCurrentTime}}</div>
+				<div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 0%;">
+				</div>
 			</div>
 		</div>
 	</div>
