--- a/index.html
+++ b/index.html
@@ -28,33 +28,41 @@
 				<audio id="audio_tag" ng-src="{{current_songFile}}">
 				</audio>
 			</div>
-			<div class="progress" style="width:400px;cursor: pointer;"  ng-click="setCurrentTime($event)">			  	
-				<div style="z-index:1000px;color:#FF0404">{{shoCurrentTime}}</div>
-				<div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 0%;">
+			<div style="width:500px">
+				<div style="float:left;width:50px;margin-top: -9px;text-align: center;">{{showCurrentTime}}</div>
+				<div class="progress" style="width:400px;cursor: pointer;float:left;"  ng-click="setCurrentTime($event)">			  	
+					<!-- <div style="z-index:1000px;color:#FF0404"></div> -->
+					<div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 0%;">
+					</div><img src="img/positionslider.png" style="margin-top:-20px;">
 				</div>
+				<div style="float:left;width:50px;margin-top: -9px;text-align: center;">{{duration}}</div>				
 			</div>
 		</div>
 	</div>
 
 	<div class="listado">
+		<input type="text" ng-model="filtro" placeholder="Buscar" class="form-control">
 		<table class="table noselect">
-			<tr>
-				<th>Titulo</th>
-				<th>Artista</th>
-				<th>Album</th>
-			</tr>
-			<tr ng-repeat="song in songs" 
-				ng-class="{'rowSong': ($index%2)!=0,'rowSongAlt': ($index%2)==0, 'playing': song.playClass}"
-				ng-dblclick="playSong($index)">
-				<td>{{song.title}}</td>
-				<td>{{song.artist}}</td>
-				<td>{{song.album=='Default'?'':song.album}}</td>
-			</tr>
+			<thead>
+				<tr>
+					<th>Titulo</th>
+					<th>Artista</th>
+					<th>Album</th>
+				</tr>
+        	</thead>
+        	<tbody style="height:40%;overflow-y: scroll;">
+				<tr ng-repeat="song in songs | filter: filtro" 
+					ng-class="{'rowSong': ($index%2)!=0,'rowSongAlt': ($index%2)==0, 'playing': song.playClass}"
+					ng-dblclick="playSong($index)">
+					<td>{{song.title}}</td>
+					<td>{{song.artist}}</td>
+					<td>{{song.album=='Default'?'':song.album}}</td>
+				</tr>			
+			</tbody>
 		</table>
 	</div>
 	<div class="fileLoader">
 		<div ng-show="uploader.isHTML5">
-            <!-- Example: nv-file-drop="" uploader="{Object}" options="{Object}" filters="{String}" -->
             <div nv-file-drop="" uploader="uploader">
                 <div nv-file-over="" uploader="uploader" over-class="another-file-over-class" class="well my-drop-zone">
 					<input type="file" nv-file-select="" uploader="uploader" multiple  accept=".mp3" />
